<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMenuActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:id="@+id/main_menu_layout"

    android:paddingTop="100dp"
    android:paddingBottom="100dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:drawableRight="@drawable/ic_launcher"

        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:id="@+id/multi_online_button"
            android:onClick="onClickMultiOnline"
            android:text="@string/sp_gps"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:id="@+id/single_button"
            android:onClick="onClickSinglePlayer"
            android:text="@string/singleplayer"/>

        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:id="@+id/multi_local_button"
            android:onClick="onClickMultiLocal"
            android:text="@string/multi_local"/>

    </LinearLayout>


</LinearLayout>